completed all functionality

--- a/app.html
+++ b/app.html
@@ -55,6 +55,7 @@
         <div class="task-container" id="archived-tasks"></div>
       </section>
     </main>
+    <div id="toast-container"></div>
 
     <script src="assets/js/utils.js"></script>
     <script src="assets/js/app.js"></script>
