--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TaskFlow - Register</title>
+    <link rel="icon" type="image/png" href="data\download.webp" />
+
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
